changing workload name

--- a/.github/workflows/devExpNewRelease.yaml
+++ b/.github/workflows/devExpNewRelease.yaml
@@ -10,7 +10,7 @@ on:
 
 env:
   location: "northuscentral"
-  solutionName: "ContosoDevEx"
+  solutionName: "ContosoDevExp"
   devBoxResourceGroupName: "ContosoDevEx-rg"
   networkResourceGroupName: "ContosoDevEx-Network-rg"
   managementResourceGroupName: "ContosoDevEx-Management-rg"
