--- a/.configuration/workloads/frontend-Engineer/frontend-engineer-workload.yaml
+++ b/.configuration/workloads/frontend-Engineer/frontend-engineer-workload.yaml
@@ -3,6 +3,10 @@ name: 'frontend-engineer-workload'
 description: 'Front End Engineer Workload'
 tasks:
   - name: winget
+    description: Install PowerShell
+    parameters:
+      package: 'Microsoft.PowerShell'
+  - name: winget
     description: Install workload prerequisites
     parameters:
       downloadUrl: 'https://raw.githubusercontent.com/Evilazaro/DevExp-DevBox/refs/heads/main/.configuration/workloads/baseline.dsc.yaml'
