--- a/.configuration/workloads/workload-baseline.yaml
+++ b/.configuration/workloads/workload-baseline.yaml
@@ -3,6 +3,10 @@ name: ''
 description: ''
 tasks:
   - name: winget
+    description: Install PowerShell
+    parameters:
+      package: 'Microsoft.PowerShell'
+  - name: winget
     description: Install workload prerequisites
     parameters:
       downloadUrl: 'https://raw.githubusercontent.com/Evilazaro/DevExp-DevBox/refs/heads/main/.configuration/workloads/baseline.dsc.yaml'
