--- a/.configuration/workloads/frontend-Engineer/frontend-engineer-workload.yaml
+++ b/.configuration/workloads/frontend-Engineer/frontend-engineer-workload.yaml
@@ -13,8 +13,15 @@ tasks:
       configurationFile: 'C:\WinGetConfig\baseline.dsc.yaml'
       runAsUser: true
   - name: winget
-    description: Install Front End Engineer workload
+    description: Install Dotnet SDK and Runtime
+    parameters:
+      downloadUrl: 'https://raw.githubusercontent.com/Evilazaro/DevExp-DevBox/refs/heads/main/.configuration/workloads/front/dotnet.dsc.yaml'
+      configurationFile: 'C:\WinGetConfig\dotnet.dsc.yaml'
+      runAsUser: true
+  - name: winget
+    description: Configure Front End Engineer workload
     parameters:
       downloadUrl: 'https://raw.githubusercontent.com/Evilazaro/DevExp-DevBox/refs/heads/main/.configuration/workloads/frontend-Engineer/frontend.dsc.yaml'
       configurationFile: 'C:\WinGetConfig\frontend.dsc.yaml'
       runAsUser: true
+  
