--- a/.configuration/workloads/baseline.dsc.yaml
+++ b/.configuration/workloads/baseline.dsc.yaml
@@ -20,6 +20,8 @@ properties:
       ### Install: GitHub.GitHubDesktop
       ### Enable: Developer Mode
       ### Install: Windows Terminal
+      ### Install: Microsoft.Office
+      ### Install: Windows VirtualMachinePlatform
       ########################################################
       ### -----------------------------------------------------
     - resource: Microsoft.WinGet.DSC/WinGetPackage
@@ -166,3 +168,11 @@ properties:
         source: winget
       dependsOn:
         - Microsoft.AppInstaller
+    ### Install Windows VirtualMachinePlatform
+    ### -------------------------------------
+    - resource: PSDscResources/WindowsOptionalFeature
+      directives:
+        description: Install VirtualMachinePlatform
+      settings:
+        name: VirtualMachinePlatform
+        ensure: Present
