--- a/.configuration/workloads/frontend-Engineer/frontend-engineer-workload.yaml
+++ b/.configuration/workloads/frontend-Engineer/frontend-engineer-workload.yaml
@@ -7,7 +7,7 @@ tasks:
     parameters:
       package: 'Microsoft.PowerShell'
   - name: winget
-    description: Install workload prerequisites
+    description: Install workload baseline prerequisites
     parameters:
       downloadUrl: 'https://raw.githubusercontent.com/Evilazaro/DevExp-DevBox/refs/heads/main/.configuration/workloads/baseline.dsc.yaml'
       configurationFile: 'C:\WinGetConfig\baseline.dsc.yaml'
@@ -19,7 +19,7 @@ tasks:
       configurationFile: 'C:\WinGetConfig\dotnet.dsc.yaml'
       runAsUser: true
   - name: winget
-    description: Configure Front End Engineer workload
+    description: Install Visual Studio Code and Extensions
     parameters:
       downloadUrl: 'https://raw.githubusercontent.com/Evilazaro/DevExp-DevBox/refs/heads/main/.configuration/workloads/frontend-Engineer/frontend.dsc.yaml'
       configurationFile: 'C:\WinGetConfig\frontend.dsc.yaml'
