--- a/.configuration/workloads/frontend-Engineer/frontend-engineer-workload.yaml
+++ b/.configuration/workloads/frontend-Engineer/frontend-engineer-workload.yaml
@@ -19,9 +19,15 @@ tasks:
       configurationFile: 'C:\WinGetConfig\dotnet.dsc.yaml'
       runAsUser: true
   - name: winget
+    description: Install Azure CLI and Azure Developer CLI
+    parameters:
+      downloadUrl: 'https://raw.githubusercontent.com/Evilazaro/DevExp-DevBox/refs/heads/main/.configuration/workloads/azure/azure.dsc.yaml'
+      configurationFile: 'C:\WinGetConfig\azure.dsc.yaml'
+      runAsUser: true
+  - name: winget
     description: Install Visual Studio Code and Extensions
     parameters:
-      downloadUrl: 'https://raw.githubusercontent.com/Evilazaro/DevExp-DevBox/refs/heads/main/.configuration/workloads/frontend-Engineer/frontend.dsc.yaml'
-      configurationFile: 'C:\WinGetConfig\frontend.dsc.yaml'
+      downloadUrl: 'https://raw.githubusercontent.com/Evilazaro/DevExp-DevBox/refs/heads/main/.configuration/workloads/ides/frontend.dsc.yaml'
+      configurationFile: 'C:\WinGetConfig\vscode.dsc.yaml'
       runAsUser: true
   
